--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.7.0",
     "react-router-dom": "^7.6.2",
+    "sonner": "^2.0.6",
     "tailwindcss": "^4.1.11",
     "yup": "^1.6.1"
   },
